Style cleanups and addition of Linter to Build Process